# cosmographi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: unit-test.yaml
docs/: muzcosmology.ipynb  old_zmMcosmology.ipynb  zmMcosmology v2.ipynb  zmMcosmology.ipynb  zmucosmology v2.ipynb  zmucosmology v3.ipynb
src/: start_test.py
src/badees/cosmology/: base.py
src/badees/sn/: base.py
src/badees/sn/detect/: base.py
src/badees/sn/lightcurve/: base.py
src/badees/sn/rates/: rates.py
src/badees/utils/: constants.py
src/cosmographi/: __init__.py
src/cosmographi/cosmology/: __init__.py  base.py
src/cosmographi/cosmology/func/: __init__.py  cosmology.py
src/cosmographi/detect/: __init__.py  muzsigmoid.py  zmMsigmoid.py  zmuNCDF.py
src/cosmographi/filters/: __init__.py  base.py
src/cosmographi/instrument/: __init__.py  base.py  rubin.py
src/cosmographi/likelihood/: base.py
src/cosmographi/magsystem/: __init__.py  base.py  magab.py
src/cosmographi/rates/: __init__.py  base.py  rates.py
src/cosmographi/scripts/: compare_times.py
src/cosmographi/sims/: __init__.py  sampler.py
src/cosmographi/sn/: __init__.py
src/cosmographi/sn/detect/: __init__.py  base.py  muzsigmoid.py  threshold.py  zmMsigmoid.py
src/cosmographi/sn/host/: base.py
src/cosmographi/sn/lightcurve/: AbsMag.py  __init__.py
src/cosmographi/sn/muzlikelihood/: __init__.py  base.py  gaussian.py
src/cosmographi/sn/rates/: __init__.py  base.py  combined.py  rates.py
src/cosmographi/sn/sed/: __init__.py  base.py  blackbody.py
src/cosmographi/sn/zmulikelihood/: __init__.py  base.py  gaussian.py
src/cosmographi/source/: __init__.py  base.py  blackbody.py  factory.py  salt2.py
src/cosmographi/source/effects/: Calzetti00.py  Fitzpatrick99.py  __init__.py  base.py  weak_lensing.py
src/cosmographi/source/func/: __init__.py  blackbody.py
src/cosmographi/survey/: base.py
src/cosmographi/throughput/: __init__.py  base.py  lsst.py  rubin.py
src/cosmographi/throughput/transmissions/: lsst_atmos_10.csv  lsst_atmos_std.csv  lsst_hardware_g.csv  lsst_hardware_i.csv  lsst_hardware_r.csv  lsst_hardware_u.csv  lsst_hardware_y.csv  lsst_hardware_z.csv
src/cosmographi/utils/: __init__.py  constants.py  evaluation.py  extinction.py  flux.py  helpers.py  integration.py  interpolation.py  loading.py  plots.py  sampling.py  survey.py
src/cosmographi/utils/bands/: __init__.py  bands.py  load_bands.py
tests/: conftest.py  test_cosmology.py  test_distances.py  test_flux.py  test_magsystem.py  test_scripts.py  test_sources.py  test_timings2.json  test_utils.py
