[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "badees"
dynamic = [
        "dependencies",
        "version"
]
authors = [
  { name="Connor Stone", email="connorstone628@gmail.com" },
]
description = "BaDEES: Bayesian Dark Energy Equation of State"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
        "dark energy",
        "astronomy",
        "cosmology",
        "cosmological parameters",
        "astrophysics",
        "differentiable programming",
        "jax"
]
classifiers=[
        "Development Status :: 1 - Planning",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/ConnorStoneAstro/BaDEES"
Documentation = "https://badees.readthedocs.io/en/latest/"
Repository = "https://github.com/ConnorStoneAstro/BaDEES"
Issues = "https://github.com/ConnorStoneAstro/BaDEES/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=4.1,<5",
    "pytest-mock>=3.12,<4",
    "pre-commit>=3.6,<4",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/badees/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100 # Same as Black.
ignore = ["E741"]

[tool.pytest.ini_options]
norecursedirs = "tests/utils"